<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FleetKnowledgeActivity!</string>
    <string name="app_name">Fleet Knowledge</string>
    <string name="recruiters">Recruiters</string>
    <string name="recruitersquestions">Recruiter Questions</string>
    <string name="empty"></string>
    <string name="title_creed">Creeds</string>
    <string name="creed_sailorscreed">I am a United States Sailor\n\nI will support and defend the Constitution of the United States of America and I will obey the orders of those appointed over me.\n\nI represent the fighting spirit of the Navy and those who have gone before me to defend freedom and democracy around the world.\n\nI proudly serve my country’s Navy combat team with Honor, Courage and Commitment.\n\nI am committed to excellence and the fair treatment of all.</string>

    <string name="creed_pocreed">I am a Petty Officer in the United States Navy, the strongest Navy in the world. I have the distinct privilege of being a leader of the finest Sailors anywhere. As such, I owe my Sailors leadership that they can depend on, trust, and follow. \n\nI will neither fear nor shun responsibility and I am always responsible for my actions. I am always fair and impartial when dealing with my Sailors; remembering not to accept full credit for a "A Job Well Done" without proper recognition of my Sailors first. \n\nI am loyal to my subordinates, peers, and those officers appointed over me. I cannot favor either; my integrity must be beyond reproach. \n\nI will fully support all Navy Regulations and Articles of the Uniform Code of Military Justice. I have the duty to correct and report all violations of these regulations that govern my Navy. \n\nI instill Esprit de Corps throughout the Petty Officer grades in the Navy; bearing allegiance to each other. \n\nI owe all of the above not to just myself, but to the United States, to my Navy, and to the Sailors who work for me."</string>

    <string name="creed_cpocreed">During the course of this day, you have been caused to suffer indignities, to experience humiliation. This you have accomplished with rare good grace and, therefore, I now believe it fitting to explain to you why this was done. There was no intent, and no desire, to demean you nor to insult you. Pointless as it may have seemed to you, there was a time-honored and valid reason behind every single deed, every single barb. By experience, by performance and by testing, you have been this day advanced to Chief Petty Officer. In the United States Navy and only in the United States Navy does E-7 carry unique responsibilities no other armed force throughout the world carries, nor which grants privileges to its enlisted personnel comparable to the privileges and responsibilities you are now bound to observe and are expected to fulfill. \n\nYour entire way of life has now been changed. More will be expected of you; more will be demanded of you. Not because you are an E-7, but because you are now a Chief Petty Officer. You have not merely been promoted one pay grade. You have joined an exclusive fraternity and, as in all fraternities, you have a responsibility to your brothers even as they have a responsibility to you. Always bear in mind that no other armed force has rate or rank equivalent to that of the United States Navy. Granted, that all armed forces have two classes of service: enlisted and commissioned; however, the United States Navy has the distinction of having four (i.e., Enlisted, Bureau appointed CPO, Bureau appointed Warrant and Commissioned). This is why you can maintain with pride your feeling of superiority once you have attained the position of E-7 in the United States Navy. \n\nThese privileges, these responsibilities do not appear in print. They have no official standing. They cannot be referred to by name, number nor file. They exist because for over 200 years the Chiefs before you have freely accepted responsibility beyond call of printed assignment and have, by their actions and performance, commanded the respect of their seniors as well as their juniors. It is now required that you be a fountain of wisdom, the ambassador of good will, the authority in personnel relations as well as technical application. Ask the Chief is a household phrase, both in and out of the Navy. \n\nYou are now the Chief. So this, then, is why you were caused to experience these things. You were subjected to humiliation to prove to you that humility is a good, a great, a necessary attribute which cannot mar you in fact, it strengthens you and, in your future as a Chief Petty Officer, you will be caused to suffer indignities, to experience humiliation far beyond those imposed upon you today. Bear them with the dignity, and with the same good grace, which you bore these today. It is our intention to prove these facts to you. It is our intention that you will never forget this day. It is our intention to test you, to try you, and to accept you. Your performance today has assured us that you will wear your hat with aplomb, as did your brothers in arms before you. We take a deep, sincere pleasure in clasping your hand, and accepting you as a Chief Petty Officer.</string>
    <string name="creed_corpsmancreed">I solemnly pledge myself before God and these witnesses to practice faithfully all of my duties as a member of the Hospital Corps. I hold the care of the sick and injured to be a privilege and a sacred trust and will assist the Medical Officer with loyalty and honesty. I will not knowingly permit harm to come to any patient. I will not partake of nor administer any unauthorized medication. I will hold all personal matters pertaining to the private lives of patients in strict confidence. I dedicate my heart, mind and strength to the work before me. I shall do all within my power to show in myself an example of all that is honorable and good throughout my naval career.</string>
    <string name="creed_macreed">I am a Master at Arms;\n\nI hold allegiance to my country, devotion to duty, and personal integrity above all.\n\n I wear my shield of authority with dignity and restraint, and promote by example high standards of conduct, appearance, courtesy and performance.\n\n I seek no favor because of my position. I perform my duties in a firm, courteous, and impartial manner.\n\n I strive to merit the respect of my shipmates and all with whom I come in contact.</string>
    <string name="title_recognition">Recognition</string>
    <string name="title_music">Music</string>
    <string name="title_tools">Tools</string>
    <string name="title_ships">Ships</string>
    <string name="title_subs">Submarines</string>
    <string name="title_aircraft">Aircraft</string>
    <string name="title_about">Developer</string>
   
    </resources>