<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/title_recognition"
        android:textSize="22dp" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/LinearLayout04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/recceViewShipsBTN"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/button_ship_normal"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_ships" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/recceViewSubsBTN"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/button_sub"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_subs" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/recceViewAircraftBTN"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/button_aircraft"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_aircraft" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/recceViewMissilesBTN"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/button_ship_normal"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_missiles" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>