<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@color/navy_blue"
        android:gravity="center|center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/navy_gold"
        android:textSize="22dp" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/LinearLayout04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/mainViewRecruiterBTN"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/button_recruiter"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recruiters"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/mainViewRecceBTN"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/recce"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recognition"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/mainViewMusicBTN"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/button_music"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_music"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/mainViewKnowledgeBTN"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/button_light_bulb"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_knowledge"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/mainViewToolsBTN"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/button_tool"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_tools"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/mainViewAboutBTN"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/andrios"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_about"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>